[package]
name = "graphexa"
version = "0.1.0"
edition = "2024"
description = "WASM graph layout algorithms for React Flow graphs"
license = "AGPL-3.0-or-later"

[lib]
name = "graphexa"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"
